# Eclipse-Phone-Player

./: BUILD-WINDOWS.bat  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: bridge.ts  main.ts  style.css  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media.rs  models.rs  storage.rs  windows_control.rs
