[package]
name = "eclipse-phone-player"
version = "1.4.0"
description = "Phone-style GTA music and video controller"
authors = ["Eclipse Phone Player"]
edition = "2021"

[lib]
name = "eclipse_phone_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2.2"
walkdir = "2.5"
arboard = "3.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
